--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -14,7 +14,7 @@
             </mat-menu>
         </div>
         <div>
-            <button mat-button class="pricingBtn">Pricing</button>
+            <button mat-button class="pricingBtn" routerLink="/pricing">Pricing</button>
             <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
             <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
         </div>
