--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -14,7 +14,7 @@
             </mat-menu>
         </div>
         <div>
-            <button mat-button class="pricingBtn">Pricing</button>
+            <button mat-button class="pricingBtn" routerLink="/pricing">Pricing</button>
             <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
             <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
         </div>
@@ -23,8 +23,6 @@
     
 
     <h1 class="title">Pricing </h1>
-   
-    
     <mat-tab-group>
         <!--AIRCON------------------------------------------------------------------>
         <mat-tab label="Aircon"> 
@@ -60,8 +58,6 @@
                     <h2 class="airconfee">Cassette Type: Php 2,800</h2>
                     <h2 class="airconfee">Suspended Type: Php 2,800</h2>
                     <h2 class="airconfee">Concealed Type: Php 2,200</h2>
- 
-            
  
                      <h1 class="cleaningservice1">
                          <mat-icon class="text_icon"><b>done</b></mat-icon>Pressure washing of the unit
