--- a/src/app/menu-tv/menu-tv.component.html
+++ b/src/app/menu-tv/menu-tv.component.html
@@ -13,7 +13,7 @@
             </mat-menu>
         </div>
         <div>
-            <button mat-button class="pricingBtn1">Pricing</button>
+            <button mat-button class="pricingBtn1" routerLink="/pricing">Pricing</button>
             <button mat-button class="contactUsBtn1" routerLink="/contact_us">Contact Us</button>
             <button mat-button class="aboutusBtn1" routerLink="/about_us">About Us</button>
         </div>
