--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -119,7 +119,7 @@
 {
     body
     {
-        background-image: url('../../assets/airconmobilebg.jpg');
+        background-image: url('../../assets/pricingmobilebg.jpg');
         background-size: cover;
         text-align: center;
         width: 100%;
@@ -140,36 +140,93 @@
   color: #FFFFFF;
 }
 
+
+.pricingBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 80px;
+    margin-top: 0;
+    display: none;
+}
+
+.contactUsBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 0;
+    display: none;
+}
+
+.aboutusBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 0;
+    display: none;
+}
+
+.menuBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 0;
+    display: none;
+}
 .mat-card
 {
-    width: 350px;
-    height: 700px;
+    width: 90%;
+    height: fit-content;
     border-radius: 20px;
     position: center;
     margin: auto;
     margin-top: 50px;
-    
     background: rgba(0, 0, 0, 0.6);
+    
+}
 
+.logo
+    {
+        width: 40%;
+        height: 40%;
+        position: center;
+        margin: auto;
+        margin-top: 30px !important;
+    }
+
+    .title
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #FFFFFF;
+    position: center;
+    margin: auto;
+    margin-top: 30px !important;
+    
 }
 
 .description
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    padding-top: 20px;
+    font-size: 15px;
+    padding-top: 100px;
     color: #FFFFFF;
     
 }
-.title
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #FFFFFF;
-    padding-top: 30px;
-    float: left;
-    margin-left: 100px;
-}
+
+
 .footer
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -178,4 +235,5 @@
     color: whitesmoke;
     text-align: center;
 }
+
 }
