--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
- <router-outlet></router-outlet>
-<!--<app-about-us></app-about-us> -->
+ <!--<router-outlet></router-outlet>-->
+<app-feedback></app-feedback>
+
+
