--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -167,13 +167,12 @@ p{
 {
     body
     {
-        background-image: url('../../assets/airconmobilebg.jpg');
+        background-image: url('../../assets/pricingmobilebg.jpg');
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
-        
     }
   .mat-toolbar{
     background-color: #D62828;
@@ -188,23 +187,75 @@ p{
   color: #FFFFFF;
 }
 
+
+.pricingBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 80px;
+    margin-top: 0;
+    display: none;
+}
+
+.contactUsBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 0;
+    display: none;
+}
+
+.aboutusBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 0;
+    display: none;
+}
+
+.menuBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 0;
+    display: none;
+}
 .mat-card
 {
-    width: 350px;
-    height: 700px;
+    width: 90%;
+    height: 650px;
     border-radius: 20px;
     position: center;
     margin: auto;
     margin-top: 50px;
-    
     background: rgba(0, 0, 0, 0.6);
-
 }
+
+.logo
+    {
+        width: 40%;
+        height: 40%;
+        position: center;
+        margin: auto;
+        margin-top: 30px !important;
+    }
 
 .description
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 15px;
     padding-top: 20px;
     color: #FFFFFF;
     
@@ -212,17 +263,67 @@ p{
 .title
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     color: #FFFFFF;
-    padding-top: 30px;
-    float: left;
-    margin-left: 100px;
+    position: center;
+    margin: auto;
+    margin-top: 30px !important;
 }
 
+p{
+    font-size: 15px;
+}
+
+.text_icon{
+    position: relative;
+    color: #FFFFFF;
+    top: 6px;
+    margin-right: 5px;
+  }
+.address
+{
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #FFFFFF;
+    margin-top: 30px;
+    position: center !important;
+}
+
+.address2
+{
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: #FFFFFF;
+    position: center !important;
+    margin-top: -120px;
+    
+}
+
+.contact
+{
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #FFFFFF;
+    position: center !important;
+    margin-top: 110px;
+}
+
+.contact2
+{
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: #FFFFFF;
+    position: center !important;
+    margin-top: 70px;
+}
 .footer
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     background-color: #D62828;
     color: whitesmoke;
     text-align: center;
