--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,5 +1,37 @@
 @media (min-width: 820px)
 {
+    .sidenav-container {
+        height: 100%;
+      }
+      
+      .sidenav{
+        width: fit-content;
+        width: 280px;
+        background-color: #EAE2B7;
+      }
+      
+      .mat-sidenav-content{
+         height: 910px;
+         background-color: white;
+      }
+      
+      .mat-toolbar{
+        background-color: #D62828;
+        width: 100%;
+      }
+      
+      .logo{
+        width: 60%;
+        height: 18%;
+        margin-left: 60px;
+      }
+      
+      .nav-icon{
+        color: #003049;
+        font-size: 35px;
+        margin-left: 25px;
+        margin-top: -12px;
+      }
     body
     {
         background-image: url('../../assets/homebg.jpg');
@@ -180,7 +212,7 @@
         margin-left: 0;
         margin-top: 60px;
         font-size: 15px;
-        
+        display: none;
     }
     
     .contactUsBtn
@@ -192,6 +224,7 @@
         margin-left: 5px;
         margin-top: 60px;
         font-size: 15px;
+        display: none;
     }
     
     .aboutusBtn
@@ -200,10 +233,21 @@
         color: #FFFFFF;
         font-size: 17px;
         float: left;
-        
+        display: none;
         font-size: 15px;
     }
     
+    .menuBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 80px;
+    display: none;
+}
+
     .bookBtn
     {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
