--- a/src/app/reschedule/reschedule.component.html
+++ b/src/app/reschedule/reschedule.component.html
@@ -1,23 +1,60 @@
-<div class="reschedule">
-<div>
-    <h1 class="resched">Reschedule Service</h1>
+<mat-toolbar>
+  <h1 class="ayosgamit" routerLink="/home" >Ayosgamit</h1>
+ </mat-toolbar>
 
-    <button class="cancelBtn" mat-raised-button (click)="openDialog()">Cancel Request</button>
+
+
+
+<mat-card>
+  
+  
+ 
+
+  <div>
+    <h1 class="resched">Reschedule Service</h1>
+  </div>
+
+  <div>
+    <p>Pick a date to reschedule your service request.</p>
+  </div>
+
+  <div>
     <mat-form-field class="datepicker" appearance="outline">
             <mat-label>Date of Service</mat-label>
       <input matInput [matDatepicker]="picker">
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <button mat-raised-button class="dateBtn" (click)="picker.open()">Pick a date</button>
-    
-  </div>
+
+    <button mat-stroked-button class="dateBtn" (click)="picker.open()"><mat-icon>calendar_today</mat-icon></button>
+  </div>  
+ 
   
   <!--Time Slots--> 
+  <p class="timeslot">Select a time slot</p>
+  
   <div class="timeslots">
-      <h1 class="timeslot">Select a time slot</h1>
-        <button mat-stroked-button class="tech1Btn">7:00am-10:00am<h1 class="h1technicians">10 Technicians</h1></button>
-        <button mat-stroked-button class="tech2Btn">10:00am-1:00pm<h1 class="h1technicians">10 Technicians</h1></button>
-        <button mat-stroked-button class="tech3Btn">1:00pm-3:00pm<h1 class="h1technicians">10 Technicians</h1></button>
-        <button mat-stroked-button class="tech4Btn">3:00pm-6:00pm<h1 class="h1technicians">10 Technicians</h1></button>
+  <button mat-stroked-button class="tech1Btn">7:00am-10:00am<h1 class="h1technicians">10 Technicians
+    </h1>
+  </button>
+
+  <button mat-stroked-button class="tech1Btn">10:00am - 1:00pm<h1 class="h1technicians">10 Technicians
+  </h1>
+  </button>
+  <button mat-stroked-button class="tech1Btn">1:00pm - 3:00pm<h1 class="h1technicians">10 Technicians
+  </h1>
+</button>
+
+<button mat-stroked-button class="tech1Btn">3:00pm - 6:00pm<h1 class="h1technicians">10 Technicians
+</h1>
+</button>
+
+
   </div>
-</div>
+
+  <div>
+
+    <button mat-raised-button class="reschedBtn">Reschedule Request</button>
+    <button mat-raised-button class="cancelBtn">Cancel Request</button>
+  </div>
+
+</mat-card>
