--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -196,7 +196,7 @@ color: #FFFFFF;
  {
    margin-left: 20px;
    margin-top: 15px;
-   width: 1290px;
+   width: fit-content;
    height: 400px;
    border: 2px solid #E5E5E5;
  }
@@ -212,7 +212,7 @@ color: #FFFFFF;
  {
    margin-left: 15px;
    margin-top: 15px;
-   width: 1290px;
+   width: fit-content;
    height: 400px;
    border: 2px solid #E5E5E5;
  }
@@ -228,7 +228,7 @@ color: #FFFFFF;
 {
   margin-left: 20px;
   margin-top: 15px;
-  width: 1290px;
+  width: 1290fit-contentpx;
   height: 400px;
   border: 2px solid #E5E5E5;
 }
@@ -244,7 +244,7 @@ color: #FFFFFF;
 {
   margin-left: 20px;
   margin-top: 15px;
-  width: 1290px;
+  width: fit-content;
   height: 400px;
   border: 2px solid #E5E5E5;
 }
@@ -256,18 +256,28 @@ color: #FFFFFF;
   margin-left: 10px;
 }
 
-.reschedreq
-{
-  margin-left: 20px;
-  margin-top: 15px;
-  width: 1290px;
-  height: 400px;
-  border: 2px solid #E5E5E5;
-}
-
 .h1resched
 {
   font-size: 18px;
   font-family: 'Trebuchet MS';
   margin-left: 10px;
+}
+.table{
+  width: 100%;
+  height: fit-content;
+  margin-top: 50px;
+}
+table{
+  width: 1000px;
+}
+.header, td{
+  text-align: center;
+}
+.detailsBtn{
+  margin-top: 5px;
+  margin-left: 20px;
+}
+.container{
+  width: auto;
+  height: auto;
 }
