--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -10,16 +10,26 @@
    height: 910px;
    background-color: white;
 }
-.mat-toolbar{
-  background-color: #D62828;
-  width: 100%;
-}
+
 .logo{
   width: 180px;
   height: 150px;
   padding-top: 40px;
   margin-left: 55px;
 }
+
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+.ayosgamit
+{
+font-family: 'Candara';
+font-size: 30px;
+float: left;
+color: #FFFFFF;
+}
+
 
 .dashtitle
 {
@@ -163,18 +173,20 @@ margin-left: 50px;
 
 .servicetype
 {
-  color: #003049;
+  color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 30px;
-  text-align: center;
+  font-size: 20px;
+  position: center;
+  margin: auto;
+  
 }
 
 .summary
 {
-  width: fit-content;
-  height: fit-content;
+  width: 700px;
+  height: 620px;
   float: left;
-  margin: auto;
+  margin-left: 400px;
 }
 .title
 {
@@ -407,8 +419,8 @@ margin-left: 50px;
 {
   width: 160px;
   height: 40px;
-  border-color: #F77F00;
-  color: #F77F00;
+  background-color: #F77F00;
+  color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   float: right;
@@ -419,46 +431,103 @@ margin-left: 50px;
 {
   width: 120px;
   height: 40px;
-  border-color: #D62828;
-  color: #D62828;
+  background-color: #D62828;
+  color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 13px;
-  float: right;
-  margin-right: 20px;
-  margin-top: -30px;
+  float: left;
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
 .pending{
   width: 100%;
   height: 100%;
   margin: auto;
 }
+
 .pendingtxt
 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 23px;
   color: #F77F00;
+  float: right;
+  margin-right: 740px;
+}
+
+.description
+{
+  float: left;
+  margin-left: 33px;
+  margin-top: 20px;
+}
+
+.description1
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  color: grey;
+}
+.description2
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  color: grey;
+  margin-top: -15px;
+}
+.description3
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  color: grey;
+  margin-top: -15px;
 }
 
 .pendingvector
 {
-  width: 230px;
-  height: 250px;
+  width: 13%;
+  height: 15%;
   float: right;
+  margin-right: 480px;
+  margin-top: 20px;
+ 
 }
 
  .payment
 {
-  width: 450px;
-  height: 100%;
+  width: 500px;
+  height: 390px;
   float: right;
-  margin: auto;
+  margin: 10px;
+  margin-right: 500px;
+}
+.ortxt
+{
+  font-size: 15px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: grey;
+  float: left;
+  margin-left: 23px;
+  margin-top: 280px;
 }
 
 .paymentinfo
 {
+ 
   margin-top: 70px;
 }
 
+.serviceinfotxt{
+  font-size: 15px;
+
+}
+.paypalBtn
+{
+  width: 25%;
+  float: right;
+  margin-top: 10px;
+  margin-right: 80px;
+  margin-top: 250px;
+}
 
 .paymentinfotxt
 {
@@ -469,11 +538,17 @@ margin-left: 50px;
 
 .payBtn
 {
-  width: 260px;
-  height: 45px;
+  width: 43%;
+  height: 13%;
+  float: left;
+  margin-left: 5px;
   background-color: #003049;
   color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
-  margin-left: 70px;
+  margin-top: 270px;
+}
+.container{
+  width: 100%;
+  height: 100%;
 }
