--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,7 +50,6 @@
     </mat-toolbar>
 
     <div class="container">
-
       <div>
         <h1 class="dashtitle">Dashboard</h1>
       </div>
@@ -58,54 +57,109 @@
         <label>{{date | date: "MMMM dd, yyyy "}}</label>
         <label>({{date | date: "h:mm:a'"}})</label>
       </div>
-
-
       <div>
         <img class="dashvector" mat-card-image src="../../assets/homebg1.png">
       </div>
+      <mat-tab-group class="tab">
+        <mat-tab label="Pending Requests">
+          <mat-card class="pendingcard">
+            <h2 class="request">Pending Requests</h2>
+            <mat-form-field class="searchfield" appearance="outline">
+              <mat-label>
+                <mat-icon>find_in_page</mat-icon>Search..
+              </mat-label>
+              <input matInput>
+            </mat-form-field>
+            <div class="table">
+              <table>
+                <thead class="head">
+                  <tr>
+                    <th scope="col">Service ID</th>
+                    <th scope="col" class="header">Service Appliance</th>
+                    <th scope="col" class="header">Service Type</th>
+                    <th scope="col" class="header">Status</th>
+                  </tr>
+                </thead>
+                <tbody class="body">
+                  <tr *ngFor="let sr of service_request">
+                    <th scope="row">{{sr._id}}</th>
+                    <td>{{sr.service_appliance}}</td>
+                    <td>{{sr.service_type}}</td>
+                    <td>{{sr.status}}</td>
+                    <td><button mat-raised-button class="detailsBtn">Details</button></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </mat-card>
+        </mat-tab>
 
+        <mat-tab label="Completed Requests">
+          <mat-card class="pendingcard">
+            <h2 class="request">Completed Requests</h2>
+            <mat-form-field class="searchfield" appearance="outline">
+              <mat-label>
+                <mat-icon>find_in_page</mat-icon>Search..
+              </mat-label>
+              <input matInput>
+            </mat-form-field>
+            <div class="table">
+              <table>
+                <thead class="head">
+                  <tr>
+                    <th scope="col">Service ID</th>
+                    <th scope="col" class="header">Service Appliance</th>
+                    <th scope="col" class="header">Service Type</th>
+                    <th scope="col" class="header">Status</th>
+                  </tr>
+                </thead>
+                <tbody class="body">
+                  <tr *ngFor="let sr of service_request">
+                    <th scope="row">{{sr._id}}</th>
+                    <td>{{sr.service_appliance}}</td>
+                    <td>{{sr.service_type}}</td>
+                    <td>{{sr.status}}</td>
+                    <button mat-raised-button class="detailsBtn">Details</button>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </mat-card>
+        </mat-tab>
+
+        <mat-tab label="Cancelled Requests">
+          <mat-card class="pendingcard">
+            <h2 class="request">Cancelled Requests</h2>
+            <mat-form-field class="searchfield" appearance="outline">
+              <mat-label>
+                <mat-icon>find_in_page</mat-icon>Search..
+              </mat-label>
+              <input matInput>
+            </mat-form-field>
+            <div class="table">
+              <table>
+                <thead class="head">
+                  <tr>
+                    <th scope="col">Service ID</th>
+                    <th scope="col" class="header">Service Appliance</th>
+                    <th scope="col" class="header">Service Type</th>
+                    <th scope="col" class="header">Status</th>
+                  </tr>
+                </thead>
+                <tbody class="body">
+                  <tr *ngFor="let sr of service_request">
+                    <th scope="row">{{sr._id}}</th>
+                    <td>{{sr.service_appliance}}</td>
+                    <td>{{sr.service_type}}</td>
+                    <td>{{sr.status}}</td>
+                    <button mat-raised-button class="detailsBtn">Details</button>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </mat-card>
+        </mat-tab>
+      </mat-tab-group>
     </div>
-
-    <mat-tab-group class="tab">
-
-      <mat-tab label="Pending Requests">
-        <mat-card class="pendingcard">
-          <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
-            <mat-label>
-              <mat-icon>find_in_page</mat-icon>Search..
-            </mat-label>
-            <input matInput>
-          </mat-form-field>
-        </mat-card>
-      </mat-tab>
-
-      <mat-tab label="Completed Requests">
-        <mat-card class="pendingcard">
-          <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
-            <mat-label>
-              <mat-icon>find_in_page</mat-icon>Search..
-            </mat-label>
-            <input matInput>
-          </mat-form-field>
-
-        </mat-card>
-      </mat-tab>
-
-      <mat-tab label="Cancelled Requests">
-        <mat-card class="pendingcard">
-          <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
-            <mat-label>
-              <mat-icon>find_in_page</mat-icon>Search..
-            </mat-label>
-            <input matInput>
-          </mat-form-field>
-
-        </mat-card>
-      </mat-tab>
-    </mat-tab-group>
-
   </mat-sidenav-content>
 </mat-sidenav-container>
