--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
- <!--<router-outlet></router-outlet>-->
-<app-feedback></app-feedback>
+ <router-outlet></router-outlet>
+<!-- <app-feedback></app-feedback> -->
 
 
