--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -25,10 +25,6 @@
   background-color: #D62828;
   width: 100%;
 }
-<<<<<<< HEAD
-=======
-
->>>>>>> 358f1dfdd922ebba95a768f592929375c608b517
 .ayosgamit
 {
 font-family: 'Candara';
@@ -190,18 +186,10 @@ margin-left: 50px;
 
 .summary
 {
-<<<<<<< HEAD
-  width: 700px;
+  width: 750px;
   height: 620px;
   float: left;
   margin-left: 400px;
-=======
-  width: 500px;
-  height: 725px;
-  float: left;
-  margin-left: 400px;
-  margin-top: 80px;
->>>>>>> 358f1dfdd922ebba95a768f592929375c608b517
 }
 .title
 {
@@ -438,9 +426,10 @@ margin-left: 50px;
   color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
-  float: right;
-  margin-top: 80px;
-  margin-right: 20px;
+  float: left;
+  margin: 5px;
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
 
 .cancelBtn
@@ -451,15 +440,10 @@ margin-left: 50px;
   color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 13px;
-  float: left;
-<<<<<<< HEAD
+  float: right;
+  margin: 5px;
   margin-top: 40px;
   margin-bottom: 10px;
-=======
-  margin-top: 50px;
-  
-  
->>>>>>> 358f1dfdd922ebba95a768f592929375c608b517
 }
 .pending{
   width: 100%;
@@ -474,10 +458,6 @@ margin-left: 50px;
   color: #F77F00;
   float: right;
   margin-right: 740px;
-<<<<<<< HEAD
-=======
-  margin-top: 120px;
->>>>>>> 358f1dfdd922ebba95a768f592929375c608b517
 }
 
 .description
@@ -521,18 +501,10 @@ margin-left: 50px;
  .payment
 {
   width: 500px;
-<<<<<<< HEAD
   height: 390px;
   float: right;
   margin: 10px;
   margin-right: 500px;
-=======
-  height: 400px;
-  float: right;
-  margin-right: 500px;
-  
-  
->>>>>>> 358f1dfdd922ebba95a768f592929375c608b517
 }
 .ortxt
 {
@@ -580,15 +552,10 @@ margin-left: 50px;
   color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
-<<<<<<< HEAD
   margin-top: 270px;
 }
 .container{
   width: 100%;
   height: 100%;
-=======
-  margin-top: 280px;
-  
->>>>>>> 358f1dfdd922ebba95a768f592929375c608b517
 }
 }
